experiment with side by side layout for code examples and fix full background positioning to not cut off tops of images

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,9 @@
 /* The hackey way to customize        */
 /* ---------------------------------- */
 
+.reveal .slide-background {
+  background-position: 0 0 !important;
+}
 .block {
   display: inline-block;
   width: 410px;
@@ -29,6 +32,10 @@
   max-height: 500px !important;
 }
 
+.presentation-code pre {
+  width: 95% !important;
+}
+
 .hack-col-left {
   position: absolute !important;
   left: -20% !important;
@@ -44,6 +51,18 @@
 /* ---------------------------------- */
 /* The right way to customize         */
 /* ---------------------------------- */
+
+.side-by-side .container {
+  /*width: 150%;*/
+  /*margin-left: -25%;*/
+  margin: 0 auto;
+  display: flex;
+}
+
+.side-by-side .left-side,
+.side-by-side .right-side {
+  width: 50%;
+}
 
 .e2e-example h3 {
   margin-left: 5%;
